# pocket-search

./: .gitignore  README.md
client/desktop-app/: Untitled-1  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
client/desktop-app/db_migrations/: 20250130230142_create_nodes_and_tasks_tables.sql
client/desktop-app/front/react/: package.json  tsconfig.json  vite.config.ts
client/desktop-app/front/react/src/: App.tsx  index.html
client/desktop-app/process/rust-tauri/: Cargo.toml  start_fastapi.py  tauri.conf.json
client/desktop-app/process/rust-tauri/migrations/: 20250130230142_create_nodes_and_tasks_tables.sql
client/desktop-app/process/rust-tauri/src/command/: initialize_app.rs  perform_tasks.rs
client/desktop-app/process/rust-tauri/src/domain/: mod.rs
client/desktop-app/process/rust-tauri/src/domain/on_metal/: task_management_service.rs
client/desktop-app/process/rust-tauri/src/domain/on_metal/middleware/file_system/: entry_type.rs  folder_scannable.rs  folder_scanner.rs
client/desktop-app/process/rust-tauri/src/service/database/: mod.rs
client/desktop-app/react/src/: App.tsx
client/desktop-app/react/src/hooks/: usePageRouter.tsx
client/desktop-app/react_mid_maturity/src/: App.tsx
client/desktop-app/rust-tauri/: Cargo.toml  start_fastapi.py  tauri.conf.json
client/desktop-app/rust-tauri/scratch/: Contrastive Decoding- Open-ended Text Generation as Optimization.doctags  Contrastive Decoding- Open-ended Text Generation as Optimization.json  Contrastive Decoding- Open-ended Text Generation as Optimization.md  Contrastive Decoding- Open-ended Text Generation as Optimization.txt
client/desktop-app/rust-tauri/src/: main.rs
client/desktop-app/rust-tauri/src/command/: initialize_app.rs  mod.rs  perform_tasks.rs  scan_folder_and_queue_tasks.rs
client/desktop-app/rust-tauri/src/daemon/: fs_sync.rs
client/desktop-app/rust-tauri/src/domain/on_metal/: mod.rs
client/desktop-app/rust-tauri/src/domain/on_metal/middleware/file_system/: entry_type.rs  file_system_entry.rs  folder_scannable.rs  folder_scanner.rs  fs_events_listener.rs  mod.rs  os_metadata.rs  semantic_metadata.rs
client/desktop-app/rust-tauri/src/domain/on_metal/middleware/file_system/sync_task/: model.rs
client/desktop-app/rust-tauri/src/domain/on_metal/task/: model.rs  repository.rs
client/desktop-app/rust-tauri/src/infrastructure/persistence/sqlite/: task_repository.rs
client/desktop-app/rust-tauri/src/service/database/: app_db.old.sqlite  app_db.rs
client/desktop-app/sqlite/: install.sh
infra/dev-scripts/: build_cargo.sh  download_models.sh  refresh_local.sh  run_local.sh
lab/agent/: react.py
lab/learning-center/: README.md  basics.md  dataset_loader.py  fine_tune.py
lab/learning-center/code/: 1.py  2.py  3.py  README.md  embed_rag.py
lab/learning-center/distillation/: distil_bert.py
lab/local_estimates/: estimate.py
service/python/reasoning-engine/: .gitignore  Dockerfile  fast-nlp-api.spec  requirements.txt  server.spec
service/python/reasoning-engine/scripts/: bundle_into_file
service/python/reasoning-engine/src/: main.py
service/python/reasoning-engine/src/config/: device_config.py  document_types_config.py  logger_config.py  models_canditates.py  models_config.py  (+1 more)
(+52 files in other folders)
