[package]
name = "desktop-app"
version = "0.1.0"
description = "Cognitive search for your file system."
authors = ["Pablo Ferrari"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1" }
thiserror = { version = "2.0.11" }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
once_cell = "1.8"
regex = "1"
tauri-plugin-dialog = "2.2.0"
