[package]
name = "desktop-app"
version = "0.1.0"
description = "Cognitive search for your file system."
authors = ["Pablo Ferrari"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1" }
thiserror = { version = "2.0.11" }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
#rusqlite = { version = "0.34.0", features = ["bundled"] }
libsqlite3-sys = { version = "0.30.1", features =  ["bundled"] }
tokio = { version = "1", features = ["full"] }
libc = { version = "0.2", features = ["extra_traits"] }
once_cell = "1.8"
regex = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
#sqlite-vec = "0.1.6"
#tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[package.metadata.cargo-build]
rustflags = ["-C", "link-args=-DSQLITE_ENABLE_LOAD_EXTENSION=1"]

[env]
LIBSQLITE3_SYS_USE_PKG_CONFIG = "0"
SQLITE3_CFLAGS = "-DSQLITE_ENABLE_LOAD_EXTENSION=1"
